--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>编辑工作</h1>
-<%= simple_form_for @job do |f| %>
-<%= f.input :title :label => "职位名称" %>
-<%= f.input :description :label => "职位描述" %>
+<%= f.input :title, :label => "职位名称" %>
+<%= f.input :description, :label => "职位描述" %>
+<%= f.input :wage_upper_bound, :label => "薪资上限" %>
+<%= f.input :wage_lower_bound, :label => "薪资下限" %>
+<%= f.input :contact_email, :label => "联系方式" %>
 <%= f.submit "Submit" %>
 <% end %>
