--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -10,6 +10,11 @@
     <td>
       <%= render_job_status(job) %>
       <%= link_to(job.title, admin_job_path(job)) %>
+      <% if job.is_hidden %>
+      <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+      <% else %>
+      <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+      <% end %>
     </td>
     <td>
       <%= link_to("Edit", edit_admin_job_path(job)) %>
